--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,19 +1,47 @@
-<div class="w-1/2 mx-auto flex flex-col gap-2">
-  <div>
-    <h1 class="text-4xl w-1/2 mx-auto py-2">ARTICLES</h1>
-    <% if @code == "ms" %>
-        <%= link_to "ENGLISH", "/articles/index/en"  %>
-    <% else %>
-        <%= link_to "BAHASA MELAYU", "/articles/index/ms"%>
-    <% end %>
-  </div>
-  <% @articles.each do |article| %>
-    <div class="border border-blue-900 p-3 rounded-md">
-      <%= link_to article.title, article.article_link, target: "_blank", class: "hover:underline hover:text-blue-500" %>
-      <p><%= article.publisher.name %></p>
-      <p><%= article.category.name %></p>
-      <p><%= article.published_date.strftime("%-l:%M%p, %d %B %Y") %></p>
-      <p><%= article.published_date %></p>
+<div class="w-[1024px] mx-auto flex flex-col gap-2 mx-10">
+  <div class="flex p-3 items-center justify-between">
+    <h1 class="text-4xl font-semibold"><%= link_to "news-aggregator", root_path %></h1>
+    <div>
+      <% if @code == "ms" %>
+        <%= link_to "news", "/articles/index/en"  %>
+      <% else %>
+        <%= link_to "berita", "/articles/index/ms"%>
+      <% end %>
     </div>
-  <% end %>
+  </div>
+  <div class="grid grid-cols-4">
+    <div class="grid divide-y divide-black col-span-3">
+      <% @articles.each do |article| %>
+        <div class="flex p-3 items-center gap-3">
+          <div class="w-48 flex-shrink-0">
+            <%= link_to article.article_link, target: "_blank", class: "cursor-pointer" do %>
+              <% if article.image_link.nil? %>
+                <div class="bg-grey-700 text-center">
+                  no images found
+                </div>
+              <% else %>
+                <%= image_tag article.image_link, class: "w-full object-fill rounded-md" %>
+              <% end %>
+            <% end %>
+          </div>
+          <div class="flex flex-col h-full justify-between gap-1.5">
+            <div>
+              <%= link_to article.title, article.article_link, target: "_blank", class: "block hover:underline hover:text-blue-500 font-semibold" %>
+              <div class="flex ">
+                <%= link_to article.publisher.name, publisher_path(article.publisher), target: "_blank", class: "text-sm block hover:underline hover:text-blue-500" %>
+              </div>
+
+            </div>
+            <div class="flex flex-col gap-1.5">
+              <span class="w-fit bg-blue-100 text-blue-800 py-1 font-medium px-2.5 rounded text-xs"><%= article.category.name %></span>
+              <p class="text-xs text-gray-500"><%= local_time(article.published_date, "%-l:%M%p, %d %B %Y") %></p>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div>
+      tags
+    </div>
+  </div>
 </div>
