REST for publishers

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,11 +1,6 @@
 <div class="h-screen w-[1024px] mx-auto flex flex-col gap-2 mx-10 justify-between">
   <%= render "partials/navbar" %>
-
-  <div class="flex px-3 gap-5 items-center">
-    <h1 class="text-2xl font-semibold"><%= @publisher.name %></h1>
-    <%= link_to "edit", edit_publisher_path, class: "text-xs hover:underline hover:text-blue-500"  %>
-    <%= link_to "delete", publisher_url(@publisher), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "text-xs hover:underline hover:text-red-500"  %>
-  </div>
+  <h1 class="text-2xl px-3 font-semibold"><%= @category.name %></h1>
   <div class="grid grid-cols-4 gap-4 flex-1">
     <%= render "partials/article_list", articles: @articles %>
     <%= render "partials/sidebar", publishers: @publishers, categories: @categories %>
