--- a/app/views/partials/_article_list.html.erb
+++ b/app/views/partials/_article_list.html.erb
@@ -21,7 +21,7 @@
 
         </div>
         <div class="flex flex-col gap-1.5">
-          <span class="w-fit bg-blue-100 text-blue-800 py-1 font-medium px-2.5 rounded text-xs"><%= article.category.name %></span>
+          <%= link_to article.category.name, category_path(article.category), target: "blank", class:"w-fit bg-blue-100 text-blue-800 py-1 font-medium px-2.5 rounded text-xs hover:bg-orange-100 hover:text-orange-800 transition" %>
           <p class="text-xs text-gray-500"><%= local_time(article.published_date, "%-l:%M%p, %d %B %Y") %></p>
         </div>
       </div>
