--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -1,7 +1,9 @@
 <div class="flex py-6 px-3 items-center justify-between">
-  <h1 class="text-4xl font-semibold"><%= link_to "news-aggregator", root_path %></h1>
-  <div>
-    <%= link_to "english", "/en", class: "font-medium"  %>
-    <%= link_to "bm", "/ms", class: "font-medium"%>
+  <h1 class="text-4xl font-semibold
+ hover:underline"><%= link_to "news-aggregator", root_path %></h1>
+  <div class="flex gap-3">
+    <%= link_to "english", "/articles/en", class: "font-medium hover:underline hover:text-blue-500"  %>
+    <%= link_to "bm", "/articles/ms", class: "font-medium hover:underline hover:text-blue-500"%>
+    <%= link_to "add publisher", new_publisher_path, class: "font-medium hover:underline hover:text-blue-500"  %>
   </div>
 </div>
