--- a/app/views/publishers/show.html.erb
+++ b/app/views/publishers/show.html.erb
@@ -3,8 +3,10 @@
 
   <div class="flex px-3 gap-5 items-center">
     <h1 class="text-2xl font-semibold"><%= @publisher.name %></h1>
-    <%= link_to "edit", edit_publisher_path, class: "text-xs hover:underline hover:text-blue-500"  %>
-    <%= link_to "delete", publisher_url(@publisher), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "text-xs hover:underline hover:text-red-500"  %>
+    <% if current_admin %>
+      <%= link_to "edit", edit_publisher_path, class: "text-xs hover:underline hover:text-blue-500"  %>
+      <%= link_to "delete", publisher_url(@publisher), method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "text-xs hover:underline hover:text-red-500"  %>
+    <% end %>
   </div>
   <div class="grid grid-cols-4 gap-4 flex-1">
     <%= render "partials/article_list", articles: @articles %>
