--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -6,6 +6,7 @@
     <%= link_to "bm", "/articles/ms", class: "font-medium hover:underline hover:text-blue-500"%>
     <% if current_admin %>
       <%= link_to "add publisher", new_publisher_path, class: "font-medium hover:underline hover:text-blue-500"  %>
+      <%= link_to "sidekiq", "/sidekiq", class: "font-medium hover:underline hover:text-blue-500"  %>
       <%= link_to "log out", destroy_admin_session_path, data: { turbo_method: :delete }, class: "font-medium hover:underline hover:text-blue-500" %>
     <% end %>
     <% unless current_admin %>
